# tui-network

./: README.md  pyproject.toml
src/tui_network/: __init__.py  app.py
src/tui_network/features/: network_manager.py
src/tui_network/static/: style.tcss
tui_network/: main.py
tui_network/assets/: NetworkApp.tcss
tui_network/features/network_manager/: network_manager.py
tui_network/static/: style.tcss
