[tool.poetry]
name = "tui-network"
version = "0.1.0"
description = "A Python based TUI for managing the wifi on Linux"
authors = ["Matteo Ferrini <mimmi.ferrini@gmail.com>"]
readme = "README.md"
include = [
    "tui_network/static"
]

[tool.poetry.scripts]
tui-network = "tui_network.main:network_app"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.89.1"
fortune-python = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
