[project]
name = "tui-network"
version = "0.2.0"
description = "A Python based TUI for managing the wifi on Linux"
readme = "README.md"
authors = [
    { name = "Matteo Ferrini", email = "mimmi.ferrini@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fortune-python>=1.1.1",
    "textual>=1.0.0",
]

[project.scripts]
tui-network = "tui_network:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
