[project]
name = "tui-network"
version = "0.2.206"
description = "A Python based TUI for managing the wifi on Linux"
readme = "README.md"
authors = [
    { name = "Matteo Ferrini", email = "mimmi.ferrini@gmail.com" },
    { name = "Kris Ilowiecki", email = "krymzon@heyorgmail" },
]
requires-python = ">=3.10"
dependencies = [
    "textual>=1.0.0",
]

[project.scripts]
tui-network = "tui_network:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
